[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gfx/teleport_column.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]

[node name="teleport_column" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.5, -0.5 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, -0.5, 0.5, 0 )
mesh = SubResource( 1 )
material/0 = null
